--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,13 +6,13 @@ bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 ##########################
 
 # Default statusbar color
-set-option -g status-style bg=colour237,fg=colour223 # bg=bg1, fg=fg1
+set-option -g status-style bg=colour237,fg=colour223
 # Default window title colors
-set-window-option -g window-status-style bg=colour214,fg=colour237 # bg=yellow, fg=bg1
+set-window-option -g window-status-style bg=colour214,fg=colour237 
 # Default window with an activity alert
-set-window-option -g window-status-activity-style bg=colour237,fg=colour248 # bg=bg1, fg=fg3
+set-window-option -g window-status-activity-style bg=colour237,fg=colour248 
 # Active window title colors
-set-window-option -g window-status-current-style bg=red,fg=colour237 # fg=bg1
+set-window-option -g window-status-current-style bg=red,fg=colour237 
 # Remove the separator between windows on status bar
 set-window-option -g window-status-separator ''
 
@@ -21,18 +21,18 @@ set-option -g pane-active-border-style fg=colour214
 # Set inactive pane border color
 set-option -g pane-border-style fg=colour242
 # Pane number display
-set-option -g display-panes-active-colour colour1 #fg2
-set-option -g display-panes-colour colour237 #bg1
+set-option -g display-panes-active-colour colour1 
+set-option -g display-panes-colour colour237 
 
 # Message info
-set-option -g message-style bg=colour239,fg=colour223 # bg=bg2, fg=fg1
+set-option -g message-style bg=colour239,fg=colour223 
 # Writing commands inactive
-set-option -g message-command-style bg=colour239,fg=colour223 # bg=fg3, fg=bg1
+set-option -g message-command-style bg=colour239,fg=colour223 
 # Clock
-set-window-option -g clock-mode-colour colour109 #blue
+set-window-option -g clock-mode-colour colour109 
 
 # Bell
-set-window-option -g window-status-bell-style bg=colour167,fg=colour235 # bg=red, fg=bg
+set-window-option -g window-status-bell-style bg=colour167,fg=colour235 
 
 # status left
 set-option -g status-left "#[fg=colour7, bg=colour241]#{?client_prefix,#[bg=colour167],} 😎 #S "
