--- a/.tmux.conf
+++ b/.tmux.conf
@@ -51,8 +51,8 @@ set-window-option -g window-status-format "\
 # status right
 set -g status-right-length 180
 set -g status-right '#[fg=colour172]'
-set -ga status-right '#[fg=colour237, bg=colour172] 📈 #(uptime | cut -f 11-13 -d " ") '
+set -ga status-right '#[fg=colour237, bg=colour172] 📈 #(~/github/dotfiles/scripts/tmux-uptime.sh -l) '
 set -ga status-right '#[fg=colour214]'
-set -ga status-right '#[fg=colour237, bg=colour214] 💻 #(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=colour223]'
+set -ga status-right '#[fg=colour237, bg=colour214] 💻 #(~/github/dotfiles/scripts/tmux-uptime.sh) #[fg=colour223]'
 set -ga status-right '#[fg=colour237, bg=colour223] 🕙 %H:%M %b %d '
 
