update tmux conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -35,7 +35,7 @@ set-window-option -g clock-mode-colour colour109
 set-window-option -g window-status-bell-style bg=colour167,fg=colour235 
 
 # status left
-set-option -g status-left "#[fg=colour7, bg=colour241]#{?client_prefix,#[bg=colour167],} 😎 #S "
+set-option -g status-left "#[fg=colour7, bg=colour241]#{?client_prefix,#[bg=colour167] 😃, 😎} #S "
 set-option -ga status-left "#[fg=colour241, bg=colour237]#{?client_prefix,#[fg=colour167],}#{?window_zoomed_flag, 🔍, - } "
 
 set-window-option -g window-status-current-format "\
