update tmux conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,6 +15,8 @@ set-window-option -g window-status-activity-style bg=colour237,fg=colour248
 set-window-option -g window-status-current-style bg=red,fg=colour237 
 # Remove the separator between windows on status bar
 set-window-option -g window-status-separator ''
+# Renumber windows when a window is closed
+set-option -g renumber-windows on
 
 # Set active pane border color
 set-option -g pane-active-border-style fg=colour214
