--- a/tmux.conf
+++ b/tmux.conf
@@ -53,8 +53,8 @@ set-window-option -g window-status-format "\
 # status right
 set -g status-right-length 180
 set -g status-right '#[fg=colour172]'
-set -ga status-right '#[fg=colour237, bg=colour172] 📈 #(~/github/dotfiles/scripts/tmux-uptime.sh -l) '
+set -ga status-right '#[fg=colour237, bg=colour172] 📈 #(~/.dotfiles/scripts/tmux-uptime.sh -l) '
 set -ga status-right '#[fg=colour214]'
-set -ga status-right '#[fg=colour237, bg=colour214] 💻 #(~/github/dotfiles/scripts/tmux-uptime.sh) #[fg=colour223]'
+set -ga status-right '#[fg=colour237, bg=colour214] 💻 #(~/.dotfiles/scripts/tmux-uptime.sh) #[fg=colour223]'
 set -ga status-right '#[fg=colour237, bg=colour223] 🕙 %H:%M %b %d '
 
